BMWH-3: Create client view with name and filetypes.