@@ -10,16 +10,17 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @Slf4j
 public class FileHandler extends SimpleChannelInboundHandler<AbstractMassage> {
 
-    private final Path serverDir = Path.of("server_files");
-    private final Path clientDir = Path.of("files");
+    private final Path serverDir = Paths.get(".","server_files");
+    private final Path clientDir = Paths.get(".","files");
 
     @Override
     public void channelActive(ChannelHandlerContext ctx) throws Exception {
-        ctx.writeAndFlush(new ListMessage(serverDir));
+        ctx.writeAndFlush((new ListMessage(serverDir)).getFiles());
     }
 
     @Override
